add new editor menu

--- a/resources/views/user/write.edge
+++ b/resources/views/user/write.edge
@@ -84,21 +84,48 @@
 	</div>
 </div>
 <div>
-	<div id="menu-1" data-flag="close" class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
-		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" href="#" id="customizer-toggle-setting">
+	<div id="menu-1" data-flag="close"
+		class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
+		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" id="customizer-toggle-setting">
 			<i class="ft-settings font-medium-3 spinner white"></i>
 		</a>
 	</div>
-	<div id="menu-2" data-flag="close" class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
-		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" href="#" id="customizer-toggle-setting">
+	<div id="menu-2" data-flag="close"
+		class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
+		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" id="customizer-toggle-setting">
 			<i class="ft-settings font-medium-3 spinner white"></i>
 		</a>
 	</div>
-	<div id="menu-3" data-flag="close" class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
-		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" href="#" id="customizer-toggle-setting">
-			<i class="ft-settings font-medium-3 spinner white"></i>
+	<div id="menu-3" data-flag="close"
+		class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
+		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" id="customizer-toggle-setting">
+			<i class="la la-adjust font-medium-3 spinner white"></i>
 		</a>
 	</div>
+</div>
+<div class="side-menu">
+		<div class="center align-side feather-icons overflow-hidden row">
+				<div class="center menu-side fonticon-container">
+				  <div class="fonticon-wrap icon-shadow icon-shadow-primary"><i class="la la-adjust"></i></div>
+				</div>
+				
+				<div class=center menu-side fonticon-container">
+				  <div class="fonticon-wrap icon-shadow icon-shadow-primary"><i class="la la-area-chart"></i></div>
+				</div>
+				
+				<div class="center menu-side fonticon-container">
+				  <div class="fonticon-wrap icon-shadow icon-shadow-primary"><i class="la la-arrows-v"></i></div>
+				</div>
+				<div class="center menu-side fonticon-container">
+				  <div class="fonticon-wrap icon-shadow icon-shadow-primary"><i class="la la-asterisk"></i></div>
+				</div>
+				<div class="center menu-side fonticon-container">
+				  <div class="fonticon-wrap icon-shadow icon-shadow-primary"><i class="la la-at"></i></div>
+				</div>
+				<div class="center menu-side fonticon-container">
+				  <div class="fonticon-wrap icon-shadow icon-shadow-primary"><i class="la la-automobile"></i></div>
+				</div>
+			</div>
 </div>
 @endsection
 
