--- a/public/assets/components/right-menu/css/right-menu.css
+++ b/public/assets/components/right-menu/css/right-menu.css
@@ -1,11 +1,33 @@
 .editor-menu{
 	height: 50px;
+	position: fixed !important;
+	width: 0 !important;
+	right: 0;
 }
 
 .menu-editor{
 	top: 0% !important;
 }
+.side-menu{
+	margin-top: 5%;
+	width: 80px;
+    height: 100%;
+    background-color: burlywood;
+    top: 0;
+    position: fixed;
+    right: 60px;
+}
 
+.menu-side{
+	height: 50px;
+    width: 50px;
+}
+
+.align-side{
+	width: inherit;
+	height: calc(100% - 100px);
+	margin: 0;
+}
 #menu-1{
 	top: 5% !important;
 }
