--- a/public/assets/components/note-write/css/note-write.css
+++ b/public/assets/components/note-write/css/note-write.css
@@ -4,11 +4,8 @@
 }
 
 .show-menu {
-
 	position: relative;
-
 	display: flex;
-
 	right: 311%;
 }
 
@@ -17,6 +14,15 @@
 	width: 92%;
 	height: 100%;
 	top: 0;
+}
+.section-image{
+	/* height: 400px; */
+	text-align: center;
+}
+
+.section-image img{
+    max-width: 95%;
+    max-height: 95%;
 }
 
 #buttonSave {
