--- a/public/assets/components/right-menu/css/right-menu.css
+++ b/public/assets/components/right-menu/css/right-menu.css
@@ -1,3 +1,4 @@
+
 .editor-menu{
 	height: 50px;
 	position: fixed !important;
@@ -9,18 +10,18 @@
 	top: 0% !important;
 }
 .side-menu{
-	margin-top: 5%;
+	margin-top: 2.5%;
 	width: 80px;
     height: 100%;
-    background-color: burlywood;
     top: 0;
     position: fixed;
-    right: 60px;
+	right: -100px;
 }
 
 .menu-side{
 	height: 50px;
-    width: 50px;
+	width: 50px;
+	cursor: pointer;
 }
 
 .align-side{
@@ -38,4 +39,24 @@
 
 #menu-3{
 	top: 25% !important;
+}
+
+
+
+/* Right Menu */
+.font-menu-icon{
+	margin-top: 13px;
+}
+
+.button-menu{
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
 }
