add app base url image

--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -32,7 +32,9 @@
     {{ style('assets/components/leftbar/css/leftbar.css')}}
 
     @!section('style')
-
+    <script>
+        const IMAGE_URL="{{assetsUrl('images')}}";
+    </script>
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns menu-expanded" data-open="click" data-menu="vertical-menu"
