--- a/public/core/markdown/css/color.css
+++ b/public/core/markdown/css/color.css
@@ -14,3 +14,9 @@
 .text-magenta{
     color: magenta;
 }
+.text-violet{
+    color: rgb(98, 0, 255);
+}
+.text-dark{
+    color: rgb(63, 63, 63);
+}
