--- a/resources/views/user/write.edge
+++ b/resources/views/user/write.edge
@@ -4,6 +4,7 @@
 {{ style('assets/components/right-menu/css/right-menu.css') }}
 {{ style('assets/components/note-write/css/note-write.css') }}
 {{ style('core/markdown/css/font.css') }}
+{{ style('core/markdown/css/color.css') }}
 
 @endsection
 
@@ -13,7 +14,7 @@
 		<div id="editor" data-id="{{note[0]._id}}">
 			<div class="card">
 				<div class="card-header">
-					<h1 class="card-title note title-note text-content display-4"
+					<h1 contenteditable="true" class="title-section full-width card-title note title-note text-content display-4"
 							data-note="title"></h1>
 							@if(note[0].title)
 							<p class="init" display="hidden" data-role="text" data-val="{{note[0].title}}"></p>
@@ -21,7 +22,7 @@
 							<p class="init" display="hidden" data-role="text" data-val="Title"></p>
 							@endif
 
-						<p class="note lable-note text-content lead" data-note="lable">
+						<p contenteditable="true" class="note lable-note text-content lead" data-note="lable">
 							@if(note[0].lable)
 							@each(lable in note[0].lable)
 							#{{lable}}
@@ -43,7 +44,7 @@
 										<li><a data-action="close"><i class="ft-x"></i></a></li>
 									</ul>
 								</div>
-								<p class="note text-note text-content " contenteditable="true" data-note="section-text"></p>
+							<p class="note text-note text-content " contenteditable="true" data-note="section-text"></p>
 								<p class="init" display="hidden" data-role="text" data-val="{{section.val[0]}}"></p>					
 							</div>
 							<div class="card-body">
@@ -70,7 +71,7 @@
 									<li><a data-action="close"><i class="ft-x"></i></a></li>
 								</ul>
 							</div>
-							<p class="note text-note text-content " contenteditable="true" data-note="section-text">
+							<p class="title-section full-width note text-note text-content " contenteditable="true" data-note="section-text">
 								@if(note[0].section)
 								@each(section in note[0].section)
 								@if(section.flag=="section-text")
@@ -118,25 +119,25 @@
 <div>
 	<div id="menu-1" data-flag="close"
 		class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
-		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" id="customizer-toggle-setting">
+		<a class="menu-editor customizer-toggle bg-primary box-shadow-3">
 			<i class="la la-font font-medium-3 white"></i>
 		</a>
 		</div>
 	<div id="menu-2" data-flag="close"
 		class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
-		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" id="customizer-toggle-setting">
+		<a class="menu-editor customizer-toggle bg-primary box-shadow-3">
 		<i class="la la-paragraph font-medium-3 white"></i>
 		</a>
 	
 	</div>
 	<div id="menu-3" data-flag="close"
 		class="editor-menu customizer border-left-blue-grey border-left-lighten-4 d-none d-xl-block">
-		<a class="menu-editor customizer-toggle bg-primary box-shadow-3" id="customizer-toggle-setting">
+		<a class="menu-editor customizer-toggle bg-primary box-shadow-3">
 			<i class="la la-adjust font-medium-3 white"></i>
 		</a>
 	</div>
 </div>
-<div id="font-menu" class="side-menu" data-action="close">
+<div id="font-style" class="side-menu" data-action="close">
 	<div class="center align-side feather-icons overflow-hidden row">
 		<div class="center menu-side fonticon-container">
 			<div class="fonticon-wrap icon-shadow icon-shadow-primary">
@@ -178,7 +179,7 @@
 		</div>
 	</div>
 </div>
-<div id="color-menu" class="side-menu" data-action="close">
+<div id="paragraf-style" class="side-menu" data-action="close">
 	<div class="center align-side feather-icons overflow-hidden row">
 		<div class="center menu-side fonticon-container">
 			<div class="fonticon-wrap icon-shadow icon-shadow-primary">
@@ -207,24 +208,72 @@
 		</div>
 		<div class="center menu-side fonticon-container">
 			<div class="fonticon-wrap icon-shadow icon-shadow-primary">
-				<input data-menu="subscript" class="button-menu" type="button">
-				<i class="la la-subscript"></i>
+				<input data-menu="indent" class="button-menu" type="button">
+				<i class="la la-indent"></i>
 			</div>
 		</div>
 		<div class="center menu-side fonticon-container">
 			<div class="fonticon-wrap icon-shadow icon-shadow-primary">
-				<input data-menu="superscript" class="button-menu" type="button">
-				<i class="la la-superscript"></i>
+				<input data-menu="outdent" class="button-menu" type="button">
+				<i class="la la-outdent"></i>
 			</div>
 		</div>
 	</div>
 </div>
+<div id="color-style" class="side-menu" data-action="close">
+		<div class="center align-side feather-icons overflow-hidden row">
+			<div class="center menu-side fonticon-container">
+				<div class="fonticon-wrap icon-shadow icon-shadow-primary">
+					<input data-menu="color" data-color="text-red" class="button-menu" type="button">
+					<i class="la la-tint text-red"></i>
+				</div>
+			</div>
+			<div class="center menu-side fonticon-container">
+				<div class="fonticon-wrap icon-shadow icon-shadow-primary">
+					<input data-menu="color" data-color="text-blue" class="button-menu" type="button">
+					<i class="la la-tint text-blue"></i>
+				</div>
+			</div>
+	
+			<div class="center menu-side fonticon-container">
+				<div class="fonticon-wrap icon-shadow icon-shadow-primary">
+					<input data-menu="color" data-color="text-yellow" class="button-menu" type="button">
+					<i class="la la-tint text-yellow"></i>
+				</div>
+			</div>
+			<div class="center menu-side fonticon-container">
+				<div class="fonticon-wrap icon-shadow icon-shadow-primary">
+					<input data-menu="color" data-color="text-green" class="button-menu" type="button">
+					<i class="la la-tint text-green"></i>
+				</div>
+			</div>
+			<div class="center menu-side fonticon-container">
+				<div class="fonticon-wrap icon-shadow icon-shadow-primary">
+					<input data-menu="color" data-color="text-violet" class="button-menu" type="button">
+					<i class="la la-tint text-violet"></i>
+				</div>
+			</div>
+			<div class="center menu-side fonticon-container">
+				<div class="fonticon-wrap icon-shadow icon-shadow-primary">
+					<input data-menu="color" data-color="text-dark" class="button-menu" type="button">
+					<i class="la la-tint text-dark"></i>
+				</div>
+			</div>
+		</div>
+	</div>
 
 @endsection
 
 @section('script')
 <script type="text/javascript">
 	var img="{{note[0].countImg}}";
+
+    if(img===undefined){
+        img=0;
+    }
+    if(img==="undefined"){
+        img=0;
+    }
 </script>
 
 {{ script('core/showdown/dist/showdown.js') }}
