new style for editor

--- a/public/assets/global/css/app.css
+++ b/public/assets/global/css/app.css
@@ -25,5 +25,15 @@
 [contenteditable]:focus {
     outline: 0px solid transparent;
 }
+*[contenteditable]{
+	display: block !important;
+}
+.title-section{
+	display: inline-block !important;
+}
+
+.full-width{
+	width: 100%;
+}
 
 
