--- a/public/assets/global/css/app.css
+++ b/public/assets/global/css/app.css
@@ -1,3 +1,8 @@
+body{
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center; 
+}
 #content{
 	margin-top: 5%;
 	margin-left:120px;
@@ -17,7 +22,10 @@
 	box-shadow: 0px 1px 15px 5px rgba(0,0,0,0.2);
 	transition: 0.3s;
 }
-
+.no-color{
+	background-color: unset;
+    box-shadow: unset;
+}
 #inSearchbar:focus {
     outline: none !important;
 }
@@ -36,4 +44,7 @@
 	width: 100%;
 }
 
-
+.bc-white{
+	background-color: white;
+	cursor: auto;
+}
