add nav add seacrh

--- a/resources/views/layout/_searchbar.edge
+++ b/resources/views/layout/_searchbar.edge
@@ -1,6 +1,6 @@
     <nav id="searchbar" class="navbar col-lg-12">
     	<div class="col-8 shadow-5 center card pull-up ecom-card-1 bg-white">
-    		<input id="inSearchbar" class="width-full form-control" type="search" placeholder="Search" aria-label="Search">
+    		<input id="inSearchbar" class="width-full form-control" type="search" aria-label="Search" placeholder="{{search}}">			  
     	</div>
 	</nav>
 	
