add background css

--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -39,8 +39,7 @@
 </head>
 
 <body class="vertical-layout vertical-menu 2-columns menu-expanded" data-open="click" data-menu="vertical-menu"
-    data-color="bg-chartbg" data-col="2-columns">
-
+    data-color="bg-chartbg" data-col="2-columns" background="{{assetsUrl('notes/boards/'+image)}}">
 
 
     @include('layout._leftbar')
