--- a/resources/views/user/home.edge
+++ b/resources/views/user/home.edge
@@ -2,6 +2,9 @@
 @section('style')
 {{ style('assets/components/card-note/css/card-note.css') }}
 {{ style('assets/components/searchbar/css/searchbar.css') }}
+{{ style('core/markdown/css/font.css') }}
+{{ style('core/markdown/css/color.css') }}
+
 @endsection
 @section('content')
 <div id="content" class="app-content content">
@@ -12,10 +15,16 @@
 			<div class="card-columns">
 				@each(post in notes)
 					<div id="{{post._id}}" data-note='{{post}}' onclick="read(this)" class="card pull-up bg-white">
-						<img class="card-img-top" src="{{ assetsUrl('images/pyramid.png') }}" alt="Card image cap">
+						@if(post.face.img)
+						<img class="card-img-top" src="{{ assetsUrl('notes/images/'+post.user_id+post.face.img) }}" alt="Card image cap">
+						@endif
+						<!--<img class="card-img-top" src="{{ assetsUrl('images/pyramid.png') }}" alt="Card image cap"> -->
 						<div class="card-body">
-							<h5 class="card-title">Card title that wraps to a new line</h5>
-						<p class="card-text">{{post.section[0].val}}</p>
+							<h5 class="note text-note text-content card-title" data-note="section-text"></h5>
+							<p class="init" display="hidden" data-role="text" data-val="{{post.title}}"></p>
+
+							<p class="note text-note text-content card-text" data-note="section-text"></p>
+							<p class="init" display="hidden" data-role="text" data-val="{{post.face.text}}"></p>
 						</div>
 					</div>
 				@endeach
@@ -26,6 +35,8 @@
 </div>
 @endsection
 @section('script')
+{{ script('core/showdown/dist/showdown.js') }}
+{{ script('core/markdown/js/init.js') }}
 {{ script('assets/components/searchbar/js/searchbar.js') }}
 {{ script('assets/components/card-note/js/card-note.js') }}
 @endsection
