--- a/resources/views/layout/_leftbar.edge
+++ b/resources/views/layout/_leftbar.edge
@@ -2,7 +2,7 @@
 	<div style="width:90px;" class="navbar-header">
 	  <ul class="nav navbar-nav flex-row">       
 		<li class="nav-item mr-auto"><a class="navbar-brand" href="/">
-			<img class="brand-logo center" alt="Chameleon admin logo" src="logo.png"/>
+			<img class="brand-logo center" alt="Chameleon admin logo" src="{{assetsUrl('logo.png')}}"/>
 			{{--  <h3 class="brand-text">NG</h3></a></li>  --}}
 		<li class="nav-item d-md-none"><a class="nav-link close-navbar"><i class="ft-x"></i></a></li>
 		</ul>
@@ -14,7 +14,7 @@
 			</li>
 			<li class="{{notes.board}}"><a class="menu-link" href="/board"><i class="la la-folder-o"></i><span class="menu-title" data-i18n=""></span></a>
 			</li>
-			<li class="{{notes.trash}}"><a class="menu-link" href="icons.html"><i class="la la-trash"></i><span class="menu-title" data-i18n=""></span></a>
+			<li class="{{notes.trash}}"><a class="menu-link" href="#"><i class="la la-trash"></i><span class="menu-title" data-i18n=""></span></a>
 			</li>
 			<li class="{{notes.setting}}"><a class="menu-link" href="/setting"><i class="la la-gear"></i><span class="menu-title" data-i18n=""></span></a>
 			</li>
