--- a/resources/views/user/login.edge
+++ b/resources/views/user/login.edge
@@ -28,6 +28,7 @@
 					<input name=password type="password" class="form-control" placeholder="Password">
 				</div>
 				<button type="submit" class="btn btn-primary">Submit</button>
+				<button class="btn btn-primary"><a class="menu-link" href="/register">Register</a></button>
 			</form>
 		</div>
 	</div>
